# fish-slack

./: README.md  SKILL.md  pyproject.toml  test_novel.txt
fish_slack/: __init__.py  __main__.py  fake_work.py  novel.py
